// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddProjectForm component > renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c7.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c7.btn .Button__value {
  width: auto;
}

.c7.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c7.btn:focus {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #2E5DD7;
  outline-offset: 2px;
  box-shadow: none;
}

.c7.btn.btn-primary {
  color: #FFFFFF;
  background-color: #013366;
}

.c7.btn.btn-primary:hover,
.c7.btn.btn-primary:active,
.c7.btn.btn-primary:focus {
  background-color: #1E5189;
}

.c7.btn.btn-secondary {
  color: #013366;
  background: none;
  border-color: #013366;
}

.c7.btn.btn-secondary:hover,
.c7.btn.btn-secondary:active,
.c7.btn.btn-secondary:focus {
  color: #FFFFFF;
  background-color: #013366;
}

.c7.btn.btn-info {
  color: #9F9D9C;
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c7.btn.btn-info:hover,
.c7.btn.btn-info:active,
.c7.btn.btn-info:focus {
  color: var(--surface-color-primary-button-hover);
  background: none;
}

.c7.btn.btn-light {
  color: #FFFFFF;
  background-color: #606060;
  border: none;
}

.c7.btn.btn-light:hover,
.c7.btn.btn-light:active,
.c7.btn.btn-light:focus {
  color: #FFFFFF;
  background-color: #606060;
}

.c7.btn.btn-dark {
  color: #FFFFFF;
  background-color: #474543;
  border: none;
}

.c7.btn.btn-dark:hover,
.c7.btn.btn-dark:active,
.c7.btn.btn-dark:focus {
  color: #FFFFFF;
  background-color: #474543;
}

.c7.btn.btn-danger {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c7.btn.btn-danger:hover,
.c7.btn.btn-danger:active,
.c7.btn.btn-danger:focus {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c7.btn.btn-warning {
  color: #FFFFFF;
  background-color: #FCBA19;
  border-color: #FCBA19;
}

.c7.btn.btn-warning:hover,
.c7.btn.btn-warning:active,
.c7.btn.btn-warning:focus {
  color: #FFFFFF;
  border-color: #FCBA19;
  background-color: #FCBA19;
}

.c7.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  color: var(--surface-color-primary-button-default);
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7.btn.btn-link:hover,
.c7.btn.btn-link:active,
.c7.btn.btn-link:focus {
  color: var(--surface-color-primary-button-hover);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c7.btn.btn-link:disabled,
.c7.btn.btn-link.disabled {
  color: #9F9D9C;
  background: none;
  pointer-events: none;
}

.c7.btn:disabled,
.c7.btn:disabled:hover {
  color: #9F9D9C;
  background-color: #EDEBE9;
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
}

.c7.Button .Button__icon {
  margin-right: 1.6rem;
}

.c7.Button--icon-only:focus {
  outline: none;
}

.c7.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c6 button.close {
  font-size: 2.4rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c1 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

.c0 {
  background-color: #f2f2f2;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.c5 textarea.form-control {
  min-width: 80rem;
  height: 7rem;
  resize: none;
}

<div
    class="c0"
  >
    <form
      class=""
      novalidate=""
    >
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Project Details
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Project name:
              </label>
            </div>
            <div
              class="c4 required text-left col"
            >
              <div
                class="input form-group"
              >
                <input
                  class="form-control"
                  id="input-projectName"
                  name="projectName"
                  style="word-break: break-all;"
                  title=""
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Project number:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="input form-group"
              >
                <input
                  class="form-control"
                  id="input-projectNumber"
                  name="projectNumber"
                  placeholder="if known"
                  style="word-break: break-all;"
                  title=""
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Status:
              </label>
            </div>
            <div
              class="c4 required text-left col"
            >
              <div
                class="form-group"
              >
                <select
                  class="form-select form-control"
                  id="input-projectStatusType"
                  name="projectStatusType"
                >
                  <option
                    value=""
                  >
                    Select...
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-AC"
                    value="AC"
                  >
                    Active (AC)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-CA"
                    value="CA"
                  >
                    Cancelled (CA)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-CNCN"
                    value="CNCN"
                  >
                    Consolidated (CNCN)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-CO"
                    value="CO"
                  >
                    Completed (CO)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-HO"
                    value="HO"
                  >
                    On Hold (HO)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-PL"
                    value="PL"
                  >
                    Planning (PL)
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                MOTT region:
              </label>
            </div>
            <div
              class="c4 required text-left col"
            >
              <div
                class="d-flex form-group"
              >
                <select
                  class="form-select form-control"
                  id="input-region"
                  name="region"
                >
                  <option
                    value=""
                  >
                    Select region...
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-1"
                    value="1"
                  >
                    South Coast Region
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-2"
                    value="2"
                  >
                    Southern Interior Region
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-12"
            >
              <label
                class="c3"
              >
                Project summary:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c5 textarea input form-group"
              >
                <textarea
                  class="form-control"
                  id="input-summary"
                  name="summary"
                  style="word-break: break-all;"
                  title=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Associated Codes
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Cost type:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c6 form-group"
                data-testid="typeahead-select-costTypeCode"
              >
                <div
                  class="rbt"
                  style="outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      id="typeahead-select-costTypeCode"
                      name="typeahead-select-costTypeCode"
                      placeholder="Type to search..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Work activity:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c6 form-group"
                data-testid="typeahead-select-workActivityCode"
              >
                <div
                  class="rbt"
                  style="outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      id="typeahead-select-workActivityCode"
                      name="typeahead-select-workActivityCode"
                      placeholder="Type to search..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Business function:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c6 form-group"
                data-testid="typeahead-select-businessFunctionCode"
              >
                <div
                  class="rbt"
                  style="outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      id="typeahead-select-businessFunctionCode"
                      name="typeahead-select-businessFunctionCode"
                      placeholder="Type to search..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Associated products
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <button
            class="c7 Button btn btn-link"
            type="button"
          >
            <div
              class="Button__value"
            >
              + Add another product
            </div>
          </button>
        </div>
      </div>
      <div />
      <div />
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Project Management Team
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <button
            class="c7 Button btn btn-link"
            data-testid="add-team-member"
            type="button"
          >
            <div
              class="Button__value"
            >
              + Add another management team member
            </div>
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`AddProjectForm component > renders as expected with existing data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c7.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c7.btn .Button__value {
  width: auto;
}

.c7.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c7.btn:focus {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #2E5DD7;
  outline-offset: 2px;
  box-shadow: none;
}

.c7.btn.btn-primary {
  color: #FFFFFF;
  background-color: #013366;
}

.c7.btn.btn-primary:hover,
.c7.btn.btn-primary:active,
.c7.btn.btn-primary:focus {
  background-color: #1E5189;
}

.c7.btn.btn-secondary {
  color: #013366;
  background: none;
  border-color: #013366;
}

.c7.btn.btn-secondary:hover,
.c7.btn.btn-secondary:active,
.c7.btn.btn-secondary:focus {
  color: #FFFFFF;
  background-color: #013366;
}

.c7.btn.btn-info {
  color: #9F9D9C;
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c7.btn.btn-info:hover,
.c7.btn.btn-info:active,
.c7.btn.btn-info:focus {
  color: var(--surface-color-primary-button-hover);
  background: none;
}

.c7.btn.btn-light {
  color: #FFFFFF;
  background-color: #606060;
  border: none;
}

.c7.btn.btn-light:hover,
.c7.btn.btn-light:active,
.c7.btn.btn-light:focus {
  color: #FFFFFF;
  background-color: #606060;
}

.c7.btn.btn-dark {
  color: #FFFFFF;
  background-color: #474543;
  border: none;
}

.c7.btn.btn-dark:hover,
.c7.btn.btn-dark:active,
.c7.btn.btn-dark:focus {
  color: #FFFFFF;
  background-color: #474543;
}

.c7.btn.btn-danger {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c7.btn.btn-danger:hover,
.c7.btn.btn-danger:active,
.c7.btn.btn-danger:focus {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c7.btn.btn-warning {
  color: #FFFFFF;
  background-color: #FCBA19;
  border-color: #FCBA19;
}

.c7.btn.btn-warning:hover,
.c7.btn.btn-warning:active,
.c7.btn.btn-warning:focus {
  color: #FFFFFF;
  border-color: #FCBA19;
  background-color: #FCBA19;
}

.c7.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  color: var(--surface-color-primary-button-default);
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7.btn.btn-link:hover,
.c7.btn.btn-link:active,
.c7.btn.btn-link:focus {
  color: var(--surface-color-primary-button-hover);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c7.btn.btn-link:disabled,
.c7.btn.btn-link.disabled {
  color: #9F9D9C;
  background: none;
  pointer-events: none;
}

.c7.btn:disabled,
.c7.btn:disabled:hover {
  color: #9F9D9C;
  background-color: #EDEBE9;
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
}

.c7.Button .Button__icon {
  margin-right: 1.6rem;
}

.c7.Button--icon-only:focus {
  outline: none;
}

.c7.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c8.c8.btn {
  background-color: unset;
  border: none;
}

.c8.c8.btn:hover,
.c8.c8.btn:focus,
.c8.c8.btn:active {
  background-color: unset;
  outline: none;
  box-shadow: none;
}

.c8.c8.btn svg {
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}

.c8.c8.btn svg:hover {
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.c8.c8.btn.btn-primary svg {
  color: #013366;
}

.c8.c8.btn.btn-primary svg:hover {
  color: #013366;
}

.c8.c8.btn.btn-light svg {
  color: var(--surface-color-primary-button-default);
}

.c8.c8.btn.btn-light svg:hover {
  color: #CE3E39;
}

.c8.c8.btn.btn-info svg {
  color: var(--surface-color-primary-button-default);
}

.c8.c8.btn.btn-info svg:hover {
  color: var(--surface-color-primary-button-hover);
}

.c9.c9.btn.btn-primary {
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: unset;
}

.c9.c9.btn.btn-primary svg {
  color: #aaaaaa !important;
}

.c9.c9.btn.btn-primary .text {
  display: none;
}

.c9.c9.btn.btn-primary svg:hover,
.c9.c9.btn.btn-primary svg:active,
.c9.c9.btn.btn-primary svg:focus {
  color: #d8292f !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: unset;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9.c9.btn.btn-primary svg:hover .text,
.c9.c9.btn.btn-primary svg:active .text,
.c9.c9.btn.btn-primary svg:focus .text {
  display: inline;
  line-height: 2rem;
}

.c10 .react-datepicker__calendar-icon {
  width: 2.4rem;
  height: 3rem;
  margin-top: 0.5rem;
  margin-right: 1.2rem;
  right: 0;
  fill: var(--surface-color-primary-button-default);
  pointer-events: none;
}

.c10 .react-datepicker__view-calendar-icon input {
  padding: 0.8rem 1.2rem 0.8rem 1.2rem;
}

.c11.c11.form-control.is-valid {
  background-image: none;
}

.c11.c11.form-control.is-invalid {
  border-color: #d8292f !important;
}

.c6 button.close {
  font-size: 2.4rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c1 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

.c12 textarea.form-control {
  min-width: 80rem;
  height: 7rem;
  resize: none;
}

.c13 {
  border-bottom: 0.1rem solid grey;
}

.c0 {
  background-color: #f2f2f2;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.c5 textarea.form-control {
  min-width: 80rem;
  height: 7rem;
  resize: none;
}

<div
    class="c0"
  >
    <form
      class=""
      novalidate=""
    >
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Project Details
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Project name:
              </label>
            </div>
            <div
              class="c4 required text-left col"
            >
              <div
                class="input form-group"
              >
                <input
                  class="form-control"
                  id="input-projectName"
                  name="projectName"
                  style="word-break: break-all;"
                  title="Project Cool A"
                  value="Project Cool A"
                />
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Project number:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="input form-group"
              >
                <input
                  class="form-control"
                  id="input-projectNumber"
                  name="projectNumber"
                  placeholder="if known"
                  style="word-break: break-all;"
                  title="771"
                  value="771"
                />
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Status:
              </label>
            </div>
            <div
              class="c4 required text-left col"
            >
              <div
                class="form-group"
              >
                <select
                  class="form-select form-control"
                  id="input-projectStatusType"
                  name="projectStatusType"
                >
                  <option
                    value=""
                  >
                    Select...
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-AC"
                    value="AC"
                  >
                    Active (AC)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-CA"
                    value="CA"
                  >
                    Cancelled (CA)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-CNCN"
                    value="CNCN"
                  >
                    Consolidated (CNCN)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-CO"
                    value="CO"
                  >
                    Completed (CO)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-HO"
                    value="HO"
                  >
                    On Hold (HO)
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-PL"
                    value="PL"
                  >
                    Planning (PL)
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                MOTT region:
              </label>
            </div>
            <div
              class="c4 required text-left col"
            >
              <div
                class="d-flex form-group"
              >
                <select
                  class="form-select form-control"
                  id="input-region"
                  name="region"
                >
                  <option
                    value=""
                  >
                    Select region...
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-1"
                    value="1"
                  >
                    South Coast Region
                  </option>
                  <option
                    class="option"
                    data-testid="select-option-2"
                    value="2"
                  >
                    Southern Interior Region
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-12"
            >
              <label
                class="c3"
              >
                Project summary:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c5 textarea input form-group"
              >
                <textarea
                  class="form-control"
                  id="input-summary"
                  name="summary"
                  style="word-break: break-all;"
                  title="Summary of the Project Cool A"
                >
                  Summary of the Project Cool A
                </textarea>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Associated Codes
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Cost type:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c6 form-group"
                data-testid="typeahead-select-costTypeCode"
              >
                <div
                  class="rbt"
                  style="outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      id="typeahead-select-costTypeCode"
                      name="typeahead-select-costTypeCode"
                      placeholder="Type to search..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Work activity:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c6 form-group"
                data-testid="typeahead-select-workActivityCode"
              >
                <div
                  class="rbt"
                  style="outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      id="typeahead-select-workActivityCode"
                      name="typeahead-select-workActivityCode"
                      placeholder="Type to search..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pb-2 row"
          >
            <div
              class="pr-0 text-left col-2"
            >
              <label
                class="c3"
              >
                Business function:
              </label>
            </div>
            <div
              class="c4 text-left col"
            >
              <div
                class="c6 form-group"
                data-testid="typeahead-select-businessFunctionCode"
              >
                <div
                  class="rbt"
                  style="outline: none; position: relative;"
                  tabindex="-1"
                >
                  <div
                    style="display: flex; flex: 1; height: 100%; position: relative;"
                  >
                    <input
                      aria-autocomplete="both"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="rbt-input-main form-control rbt-input"
                      id="typeahead-select-businessFunctionCode"
                      name="typeahead-select-businessFunctionCode"
                      placeholder="Type to search..."
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <input
                      aria-hidden="true"
                      class="rbt-input-hint"
                      readonly=""
                      style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Associated products
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <div>
            <div
              class="align-items-end pb-4 row"
            >
              <div
                class="col"
              />
              <div
                class="col-auto"
              >
                <button
                  class="c7 Button c8 c9 btn btn-primary"
                  data-testid="remove-button"
                  title="Delete Product"
                  type="button"
                >
                  <div
                    class="Button__value"
                  >
                    <svg
                      fill="currentColor"
                      height="22"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="22"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-4"
                  >
                    <label
                      class="c3"
                    >
                      Product code:
                    </label>
                  </div>
                  <div
                    class="c4 required text-left col"
                  >
                    <div
                      class="input form-group"
                    >
                      <input
                        class="form-control"
                        disabled=""
                        id="input-products.0.code"
                        name="products.0.code"
                        style="word-break: break-all;"
                        title="70"
                        value="70"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-2"
                  >
                    <label
                      class="c3"
                    >
                      Name:
                    </label>
                  </div>
                  <div
                    class="c4 required text-left col"
                  >
                    <div
                      class="input form-group"
                    >
                      <input
                        class="form-control"
                        disabled=""
                        id="input-products.0.description"
                        name="products.0.description"
                        style="word-break: break-all;"
                        title="Product A"
                        value="Product A"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pb-2 row"
            >
              <div
                class="pr-0 text-left col-2"
              >
                <label
                  class="c3"
                >
                  Start date:
                </label>
              </div>
              <div
                class="c4 text-left col-4"
              >
                <div
                  class="c10 form-group"
                >
                  <div
                    class="react-datepicker-wrapper d-block"
                  >
                    <div
                      class="react-datepicker__input-container react-datepicker__view-calendar-icon"
                    >
                      <svg
                        class="react-datepicker__calendar-icon"
                        viewBox="0 0 448 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                        />
                      </svg>
                      <input
                        autocomplete="off"
                        class="c11 form-control date-picker"
                        id="datepicker-products.0.startDate"
                        name="products.0.startDate"
                        placeholder="MMM DD, YYYY"
                        type="text"
                        value="Feb 01, 2023"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-4"
                  >
                    <label
                      class="c3"
                    >
                      Cost estimate:
                    </label>
                  </div>
                  <div
                    class="c4 text-left col"
                  >
                    <div
                      class="form-group"
                    >
                      <div
                        class="input-tooltip-wrapper"
                      >
                        <input
                          class="form-control input-number"
                          id="input-products.0.costEstimate"
                          inputmode="numeric"
                          name="products.0.costEstimate"
                          placeholder=""
                          type="text"
                          value="$60.00"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-4"
                  >
                    <label
                      class="c3"
                    >
                      Estimate date:
                    </label>
                  </div>
                  <div
                    class="c4 text-left col"
                  >
                    <div
                      class="c10 form-group"
                    >
                      <div
                        class="react-datepicker-wrapper d-block"
                      >
                        <div
                          class="react-datepicker__input-container react-datepicker__view-calendar-icon"
                        >
                          <svg
                            class="react-datepicker__calendar-icon"
                            viewBox="0 0 448 512"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                            />
                          </svg>
                          <input
                            autocomplete="off"
                            class="c11 form-control date-picker"
                            id="datepicker-products.0.costEstimateDate"
                            name="products.0.costEstimateDate"
                            placeholder="MMM DD, YYYY"
                            type="text"
                            value="Feb 02, 2023"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pb-2 row"
            >
              <div
                class="pr-0 text-left col-12"
              >
                <label
                  class="c3"
                >
                  Objectives:
                </label>
              </div>
              <div
                class="c4 text-left col"
              >
                <div
                  class="c12 textarea input form-group"
                >
                  <textarea
                    class="form-control"
                    id="input-products.0.objective"
                    name="products.0.objective"
                    style="word-break: break-all;"
                    title="Objective of Product A"
                  >
                    Objective of Product A
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="pb-2 row"
            >
              <div
                class="pr-0 text-left col-12"
              >
                <label
                  class="c3"
                >
                  Scope:
                </label>
              </div>
              <div
                class="c4 text-left col"
              >
                <div
                  class="c12 textarea input form-group"
                >
                  <textarea
                    class="form-control"
                    id="input-products.0.scope"
                    name="products.0.scope"
                    style="word-break: break-all;"
                    title="Scope of Product A"
                  >
                    Scope of Product A
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="c13 my-5"
            />
          </div>
          <div>
            <div
              class="align-items-end pb-4 row"
            >
              <div
                class="col"
              />
              <div
                class="col-auto"
              >
                <button
                  class="c7 Button c8 c9 btn btn-primary"
                  data-testid="remove-button"
                  title="Delete Product"
                  type="button"
                >
                  <div
                    class="Button__value"
                  >
                    <svg
                      fill="currentColor"
                      height="22"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="22"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-4"
                  >
                    <label
                      class="c3"
                    >
                      Product code:
                    </label>
                  </div>
                  <div
                    class="c4 required text-left col"
                  >
                    <div
                      class="input form-group"
                    >
                      <input
                        class="form-control"
                        disabled=""
                        id="input-products.1.code"
                        name="products.1.code"
                        style="word-break: break-all;"
                        title="71"
                        value="71"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-2"
                  >
                    <label
                      class="c3"
                    >
                      Name:
                    </label>
                  </div>
                  <div
                    class="c4 required text-left col"
                  >
                    <div
                      class="input form-group"
                    >
                      <input
                        class="form-control"
                        disabled=""
                        id="input-products.1.description"
                        name="products.1.description"
                        style="word-break: break-all;"
                        title="Product B"
                        value="Product B"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pb-2 row"
            >
              <div
                class="pr-0 text-left col-2"
              >
                <label
                  class="c3"
                >
                  Start date:
                </label>
              </div>
              <div
                class="c4 text-left col-4"
              >
                <div
                  class="c10 form-group"
                >
                  <div
                    class="react-datepicker-wrapper d-block"
                  >
                    <div
                      class="react-datepicker__input-container react-datepicker__view-calendar-icon"
                    >
                      <svg
                        class="react-datepicker__calendar-icon"
                        viewBox="0 0 448 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                        />
                      </svg>
                      <input
                        autocomplete="off"
                        class="c11 form-control date-picker"
                        id="datepicker-products.1.startDate"
                        name="products.1.startDate"
                        placeholder="MMM DD, YYYY"
                        type="text"
                        value="Feb 03, 2023"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-4"
                  >
                    <label
                      class="c3"
                    >
                      Cost estimate:
                    </label>
                  </div>
                  <div
                    class="c4 text-left col"
                  >
                    <div
                      class="form-group"
                    >
                      <div
                        class="input-tooltip-wrapper"
                      >
                        <input
                          class="form-control input-number"
                          id="input-products.1.costEstimate"
                          inputmode="numeric"
                          name="products.1.costEstimate"
                          placeholder=""
                          type="text"
                          value="$61.00"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="pb-2 row"
                >
                  <div
                    class="pr-0 text-left col-4"
                  >
                    <label
                      class="c3"
                    >
                      Estimate date:
                    </label>
                  </div>
                  <div
                    class="c4 text-left col"
                  >
                    <div
                      class="c10 form-group"
                    >
                      <div
                        class="react-datepicker-wrapper d-block"
                      >
                        <div
                          class="react-datepicker__input-container react-datepicker__view-calendar-icon"
                        >
                          <svg
                            class="react-datepicker__calendar-icon"
                            viewBox="0 0 448 512"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
                            />
                          </svg>
                          <input
                            autocomplete="off"
                            class="c11 form-control date-picker"
                            id="datepicker-products.1.costEstimateDate"
                            name="products.1.costEstimateDate"
                            placeholder="MMM DD, YYYY"
                            type="text"
                            value="Feb 04, 2023"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pb-2 row"
            >
              <div
                class="pr-0 text-left col-12"
              >
                <label
                  class="c3"
                >
                  Objectives:
                </label>
              </div>
              <div
                class="c4 text-left col"
              >
                <div
                  class="c12 textarea input form-group"
                >
                  <textarea
                    class="form-control"
                    id="input-products.1.objective"
                    name="products.1.objective"
                    style="word-break: break-all;"
                    title="Objective of Product B"
                  >
                    Objective of Product B
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="pb-2 row"
            >
              <div
                class="pr-0 text-left col-12"
              >
                <label
                  class="c3"
                >
                  Scope:
                </label>
              </div>
              <div
                class="c4 text-left col"
              >
                <div
                  class="c12 textarea input form-group"
                >
                  <textarea
                    class="form-control"
                    id="input-products.1.scope"
                    name="products.1.scope"
                    style="word-break: break-all;"
                    title="Scope of Product B"
                  >
                    Scope of Product B
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <button
            class="c7 Button btn btn-link"
            type="button"
          >
            <div
              class="Button__value"
            >
              + Add another product
            </div>
          </button>
        </div>
      </div>
      <div />
      <div />
      <div
        class="c1 form-section"
      >
        <h2
          class="c2"
        >
          <div
            class="no-gutters row"
          >
            <div
              class="align-content-end col"
            >
              Project Management Team
            </div>
          </div>
        </h2>
        <div
          class="collapse show"
        >
          <button
            class="c7 Button btn btn-link"
            data-testid="add-team-member"
            type="button"
          >
            <div
              class="Button__value"
            >
              + Add another management team member
            </div>
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
